Title in title case as per cran request

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fma
-Title: Data sets from "Forecasting: methods and applications" by Makridakis, Wheelwright & Hyndman (1998)
+Title: Data Sets from "Forecasting: Methods and Applications" by Makridakis, Wheelwright & Hyndman (1998)
 Description: All data sets from "Forecasting: methods and applications" by
              Makridakis, Wheelwright & Hyndman (Wiley, 3rd ed., 1998).
 Version: 2.3
