--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ LazyData: yes
 LazyLoad: yes
 Authors@R:
   person("Rob", "Hyndman", email="Rob.Hyndman@monash.edu", role=c("aut", "cre", "cph"))
-License: GPL (>= 2)
+License: GPL 3
 URL: http://pkg.robjhyndman.com/fma/
 RoxygenNote: 6.0.1.9000
