--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ LazyLoad: yes
 Authors@R:
   person("Rob", "Hyndman", email="Rob.Hyndman@monash.edu", role=c("aut", "cre", "cph"))
 License: GPL 3
-URL: http://pkg.robjhyndman.com/fma/
+URL: http://pkg.robjhyndman.com/fma/, https://github.com/robjhyndman/fma
 RoxygenNote: 6.0.1.9000
