--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,5 @@ Authors@R:
   person("Rob", "Hyndman", email="Rob.Hyndman@monash.edu", role=c("aut", "cre", "cph"))
 License: GPL-3
 URL: http://pkg.robjhyndman.com/fma/, https://github.com/robjhyndman/fma
+BugReports: https://github.com/robjhyndman/fma/issues
 RoxygenNote: 6.0.1.9000
