--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ License: GPL-3
 URL: http://pkg.robjhyndman.com/fma/, https://github.com/robjhyndman/fma
 BugReports: https://github.com/robjhyndman/fma/issues
 RoxygenNote: 6.0.1.9000
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
