--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: fma
 Title: Data Sets from "Forecasting: Methods and Applications" by Makridakis, Wheelwright & Hyndman (1998)
-Description: All data sets from "Forecasting: methods and applications" by Makridakis, Wheelwright & Hyndman (Wiley, 3rd ed., 1998).
+Description: All data sets from "Forecasting: methods and applications" by Makridakis, Wheelwright & Hyndman (Wiley, 3rd ed., 1998). <https://robjhyndman.com/forecasting/>
 Version: 2.4
-Depends: R (>= 2.0.0), forecast
+Depends: R (>= 2.0.0), forecast (>= 8.1)
 LazyData: yes
 LazyLoad: yes
-Authors@R:
-  person("Rob", "Hyndman", email="Rob.Hyndman@monash.edu", role=c("aut", "cre", "cph"))
+Authors@R: c(
+  person("Rob", "Hyndman", email="Rob.Hyndman@monash.edu", role=c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-2140-5352")),
+  person("Justin", "Carmody", role="ctb"))
 License: GPL-3
-URL: http://pkg.robjhyndman.com/fma/, https://github.com/robjhyndman/fma
+URL: https://pkg.robjhyndman.com/fma/, https://github.com/robjhyndman/fma
 BugReports: https://github.com/robjhyndman/fma/issues
 RoxygenNote: 6.0.1.9000
-Suggests: knitr,
-    rmarkdown
+Suggests: 
+  knitr,
+  rmarkdown,
+  tidyverse
 VignetteBuilder: knitr
